--- a/gridWebsite/grid/templates/grid/home_archive_2.html
+++ b/gridWebsite/grid/templates/grid/home_archive_2.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block container-content %}
+<!-- There is nothing in stylesheet -->
 <table class="table table-striped" style="text-align:center;" id="supertable">
 		<thead>
 			<tr class="thead-dark">
