--- a/gridWebsite/grid/templates/grid/grid4.html
+++ b/gridWebsite/grid/templates/grid/grid4.html
@@ -1,5 +1,10 @@
 {% extends 'grid/main.html'%}
 
+{% load static %}
+{% block content-css %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
+{% endblock %}
+
 {% block container-content %}
 
 <div class=romels-weekly-container-v4>
