--- a/gridWebsite/grid/templates/grid/index.html
+++ b/gridWebsite/grid/templates/grid/index.html
@@ -1,5 +1,10 @@
 {% extends 'grid/main.html'%}
 
+{% load static %}
+{% block content-css %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
+{% endblock %}
+
 {% block container-content %}
 
 <h1 class= "romeltitlefont">Homepage</h1>
