--- a/gridWebsite/grid/templates/grid/test2.html
+++ b/gridWebsite/grid/templates/grid/test2.html
@@ -5,7 +5,6 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 	<title>Test 2</title>
 	<link rel="stylesheet" type="text/css" href="{% static '/css/test2.css' %}">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -77,17 +76,17 @@
 	<br>
 	<br>
 	<br>
-	<table class="table table-striped">
+	<table class="table table-striped" style="text-align: center;">
 		<thead class="thead-dark">
 			<tr>
 				<th scope="col">Line</th>
-				<th scope="col">R #1</th>
-				<th scope="col">R #2</th>
-				<th scope="col">R #3</th>
-				<th scope="col">R #4</th>
-				<th scope="col">R #5</th>
-				<th scope="col">R #6</th>
-				<th scope="col">R #7</th>
+				<th scope="col">R #1 mond</th>
+				<th scope="col">R #2 test test</th>
+				<th scope="col">R #3 test test</th>
+				<th scope="col">R #4 test test</th>
+				<th scope="col">R #5 test test</th>
+				<th scope="col">R #6 test test</th>
+				<th scope="col">R #7 test test</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -105,7 +104,7 @@
 				<th scope="row">2</th>
 				<td></td>
 				<td>Rosario</td>
-				<td></td>
+				<td class="td-class">6:00am Darryl Navarro, Perry Cacdac vs Fred Alfonso, Yeong Nam Park</td>
 				<td></td>
 				<td></td>
 				<td></td>
