added a huge list set

--- a/gridWebsite/ideas/templates/ideas/ideas_home.html
+++ b/gridWebsite/ideas/templates/ideas/ideas_home.html
@@ -50,6 +50,66 @@
 				<td>{{each.id}}</td>
 				{% endfor %}
 			</tr>
+			<tr>
+				{% for each in t0700 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t0730 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t0800 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t0830 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t0900 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t0930 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1000 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1030 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1100 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1130 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1200 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1230 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
 		</tbody>
 	</table>
 </div>
