added more queries to ideas_home ...Complete lists table from 6am to 930pm

--- a/gridWebsite/ideas/templates/ideas/ideas_home.html
+++ b/gridWebsite/ideas/templates/ideas/ideas_home.html
@@ -110,6 +110,21 @@
 				<td>{{each.id}}</td>
 				{% endfor %}
 			</tr>
+			<tr>
+				{% for each in t1300 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1330 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1400 %}
+				<td>{{each.id}}</td>
+				{% endfor %}
+			</tr>
 		</tbody>
 	</table>
 </div>
