--- a/gridWebsite/ideas/templates/ideas/ideas_home.html
+++ b/gridWebsite/ideas/templates/ideas/ideas_home.html
@@ -42,87 +42,182 @@
 		<tbody>
 			<tr>
 				{% for each in t0600 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0630 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0700 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0730 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0800 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0830 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0900 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0930 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1000 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1030 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1100 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1130 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1200 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1230 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1300 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1330 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1400 %}
-				<td>{{each.id}}</td>
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1430 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1500 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1530 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1600 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1630 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1700 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1730 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1800 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1830 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1900 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t1930 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t2000 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t2030 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t2100 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t2130 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t2200 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t2230 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t2300 %}
+				<td>{{each.name}}</td>
+				{% endfor %}
+			</tr>
+			<tr>
+				{% for each in t2330 %}
+				<td>{{each.name}}</td>
 				{% endfor %}
 			</tr>
 		</tbody>
