added times in Table Log

--- a/gridWebsite/ideas/templates/ideas/ideas_home.html
+++ b/gridWebsite/ideas/templates/ideas/ideas_home.html
@@ -42,182 +42,362 @@
 		<tbody>
 			<tr>
 				{% for each in t0600 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0630 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0700 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0730 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0800 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0830 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0900 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t0930 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1000 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1030 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1100 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1130 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1200 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1230 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1300 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1330 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1400 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1430 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1500 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1530 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1600 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1630 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1700 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1730 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1800 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1830 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1900 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t1930 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t2000 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t2030 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t2100 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t2130 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t2200 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t2230 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t2300 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 			<tr>
 				{% for each in t2330 %}
-				<td>{{each.name}}</td>
+				<td>
+					<div></div>
+					<div></div>
+					<span>{{each.id}}</span><br>
+					<span>{{each.name}}</span>
+				</td>
 				{% endfor %}
 			</tr>
 		</tbody>
