going back to using ideas_home.html because it has the .all() objects in the template

--- a/gridWebsite/formsapp/templates/formsapp/formsapp_create.html
+++ b/gridWebsite/formsapp/templates/formsapp/formsapp_create.html
@@ -1,13 +1,21 @@
-{% extends 'ideas/ideas_main.html' %}
+{% extends 'formsapp/formsapp_main.html' %}
 {% load static %}
+{% load index %}
 {% block shop-css %}
-<title>ideas_home html</title>
+<title>Create Order</title>
 <link rel="stylesheet" type="text/css" href="{% static '/css/shop_home.css' %}">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 {% endblock %}
 
 {% block shop-content %}
-<div class="mx-auto">
-	<h1>hello world</h1>
-</div>
+
+<h1>Create Order</h1>
+
+<form action="" method="POST">
+	{% csrf_token %}
+	{{form}}
+	<input type="submit" name="Submit">
+</form>
+
+
 {% endblock %}
