--- a/gridWebsite/updateform/templates/updateform/updateforms_browser.html
+++ b/gridWebsite/updateform/templates/updateform/updateforms_browser.html
@@ -3,44 +3,46 @@
 {% load modulo %}
 {% block shop-css %}
 <title>Browser_in_updateforms</title>
-<link rel="stylesheet" type="text/css" href="{% static '/css/updateforms_css_browser.css' %}">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="{% static '/css/updateforms_css_browser.css' %}">
 {% endblock %}
 
 {% block shop-content %}
 <!--These are nothing but random typings -->
-<h1>Hello World</h1>
 <!-- This table shows values going in a row -->
-<div class="container-fluid" id="container-fluid">
-	<table class="table table-striped table-bordered text-center">
-		<caption>Browser Table</caption>
-		<thead class="thead-dark">
-			<tr>
-				<th>Court 1</th>
-				<th>Court 2</th>
-				<th>Court 3</th>
-				<th>Court 4</th>
-				<th>Court 5</th>
-				<th>Court 6</th>
-				<th>Court 7</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for ea in obj %}
-				{% if forloop.counter0 == 0 %}
+<div class="my-container">
+	<div class="container-fluid">
+		<h1>Hello World</h1>
+		<table class="table table-bordered text-center" id="my_table">
+			<caption>Browser Table</caption>
+			<thead class="thead-dark">
 				<tr>
-					<td><div>{{ea.id}}</div><div>{{ea.name}}</div><br><div>{{ea.player_1}}</div><div>{{ea.player_2}}</div><br><div>{{ea.guest_1}}</div><div>{{ea.guest_2}}</div><div><br><a href="{% url 'browserUpdate' ea.id %}">Update</a></div></td>
-				{% elif forloop.counter0|modulo:7 != 0 %}
-					<td><div>{{ea.id}}</div><div>{{ea.name}}</div><br><div>{{ea.player_1}}</div><div>{{ea.player_2}}</div><br><div>{{ea.guest_1}}</div><div>{{ea.guest_2}}</div><div><br><a href="{% url 'browserUpdate' ea.id %}">Update</a></div></td>
-				{% else %}
+					<th>Court 1</th>
+					<th>Court 2</th>
+					<th>Court 3</th>
+					<th>Court 4</th>
+					<th>Court 5</th>
+					<th>Court 6</th>
+					<th>Court 7</th>
 				</tr>
-				<tr>
-					<td><div>{{ea.id}}</div><div>{{ea.name}}</div><br><div>{{ea.player_1}}</div><div>{{ea.player_2}}</div><br><div>{{ea.guest_1}}</div><div>{{ea.guest_2}}</div><div><br><a href="{% url 'browserUpdate' ea.id %}">Update</a></div></td>
-				{% endif %}
-			{% endfor %}
-			</tr>
-		</tbody>
-	</table>
+			</thead>
+			<tbody>
+				{% for ea in obj %}
+					{% if forloop.counter0 == 0 %}
+					<tr>
+						<td class= "{% if ea.player_1 %} table-primary {% endif %}" id="td-now"><div>{{ea.id}}</div><div>{{ea.name}}</div><br><div>{{ea.player_1}}</div><div>{{ea.player_2}}</div><br><div>{{ea.guest_1}}</div><div>{{ea.guest_2}}</div><div><br><a href="{% url 'browserUpdate' ea.id %}">Update</a></div></td>
+					{% elif forloop.counter0|modulo:7 != 0 %}
+						<td class= "{% if ea.player_1 %} table-primary {% endif %}" id="td-now"><div>{{ea.id}}</div><div>{{ea.name}}</div><br><div>{{ea.player_1}}</div><div>{{ea.player_2}}</div><br><div>{{ea.guest_1}}</div><div>{{ea.guest_2}}</div><div><br><a href="{% url 'browserUpdate' ea.id %}">Update</a></div></td>
+					{% else %}
+					</tr>
+					<tr>
+						<td class= "{% if ea.player_1 %} table-primary {% endif %}" id="td-now"><div>{{ea.id}}</div><div>{{ea.name}}</div><br><div>{{ea.player_1}}</div><div>{{ea.player_2}}</div><br><div>{{ea.guest_1}}</div><div>{{ea.guest_2}}</div><div><br><a href="{% url 'browserUpdate' ea.id %}">Update</a></div></td>
+					{% endif %}
+				{% endfor %}
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	<div>Hello</div>
 </div>
-
 {% endblock %}
