--- a/gridWebsite/updateform/templates/updateform/simple_blog.html
+++ b/gridWebsite/updateform/templates/updateform/simple_blog.html
@@ -2,16 +2,52 @@
 {% load static %}
 {% load modulo %}
 {% block shop-css %}
-<title>Browser_in_updateforms</title>
+<title>Simple Blog</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="{% static '/css/simple_blog.css' %}">
 {% endblock %}
 
 {% block shop-content %}
 <!-- Start of blog-div -->
-<div class="blog-div">
-	<h1>Hello World</h1>
-	<p>Hello paragraph</p>
+<div class="container-fluid blog-div">
+	<div class="row justify-content-center">
+		<div class="col article">
+			<h1 class="display-4">Hello</h1>
+			<!-- empty paragraph -->
+			<div>
+				<blockquote class="blockquote">
+					<p>Test Text here</p>
+					<footer class="mb-5 blockquote-footer">
+						by Romel from 
+						<cite>The Guam Daily Post</cite>
+					</footer>
+				</blockquote>
+			<p class="lead">Another test text here </p>
+			</div> <!-- end of empty paragraph -->
+			<!-- first paragraph -->
+			<p></p>
+			<p>nice</p>
+			
+			<p class="text-justify p-5 mb-5 shadow bg-white"> This article explores Python modules and Python packages, two mechanisms that facilitate modular programming.
+
+				Modular programming refers to the process of breaking a large, unwieldy programming task into separate, smaller, more manageable subtasks or modules. Individual modules can then be cobbled together like building blocks to create a larger application.
+
+				There are several advantages to modularizing code in a large application:
+
+				Simplicity: Rather than focusing on the entire problem at hand, a module typically focuses on one relatively small portion of the problem. If you’re working on a single module, you’ll have a smaller problem domain to wrap your head around. This makes development easier and less error-prone.
+
+				Maintainability: Modules are typically designed so that they enforce logical boundaries between different problem domains. If modules are written in a way that minimizes interdependency, there is decreased likelihood that modifications to a single module will have an impact on other parts of the program. (You may even be able to make changes to a module without having any knowledge of the application outside that module.) This makes it more viable for a team of many programmers to work collaboratively on a large application.
+
+				Reusability: Functionality defined in a single module can be easily reused (through an appropriately defined interface) by other parts of the application. This eliminates the need to duplicate code.
+
+				Scoping: Modules typically define a separate namespace, which helps avoid collisions between identifiers in different areas of a program. (One of the tenets in the Zen of Python is Namespaces are one honking great idea—let’s do more of those!)
+
+				Functions, modules and packages are all constructs in Python that promote code modularization. <span></span>
+			</p>
+			<!-- end of first paragraph -->
+			<p>another paragraph</p>
+		</div>
+	</div>
 </div> <!-- End of blog-div -->
 
 {% endblock %}
