added table: I think I'm done. Show?

--- a/gridWebsite/updateform/templates/updateform/simple_blog.html
+++ b/gridWebsite/updateform/templates/updateform/simple_blog.html
@@ -18,17 +18,15 @@
 				<blockquote class="blockquote">
 					<p>Test Text here</p>
 					<footer class="mb-5 blockquote-footer">
-						by Romel from 
-						<cite>The Guam Daily Post</cite>
+						by Romel,
+						<cite>Self-Published Piece</cite>
 					</footer>
 				</blockquote>
 			<p class="lead">Another test text here </p>
 			</div> <!-- end of empty paragraph -->
 			<!-- first paragraph -->
-			<p></p>
-			<p>nice</p>
-			
-			<p class="text-justify p-5 mb-5 shadow bg-white"> This article explores Python modules and Python packages, two mechanisms that facilitate modular programming.
+			<p class="text-justify p-5 mb-5 shadow bg-white"> 
+				This article explores Python modules and Python packages, two mechanisms that facilitate modular programming. 
 
 				Modular programming refers to the process of breaking a large, unwieldy programming task into separate, smaller, more manageable subtasks or modules. Individual modules can then be cobbled together like building blocks to create a larger application.
 
@@ -46,7 +44,41 @@
 			</p>
 			<!-- end of first paragraph -->
 			<p>another paragraph</p>
-		</div>
+			<!-- This table -->
+			<div class="shadow p-2 bg-white mb-5">
+				<table class="table">
+				  <thead class="thead-dark">
+				    <tr>
+				      <th scope="col">#</th>
+				      <th scope="col">First</th>
+				      <th scope="col">Last</th>
+				      <th scope="col">Handle</th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				    <tr>
+				      <th scope="row">1</th>
+				      <td>Mark</td>
+				      <td>Otto</td>
+				      <td>@mdo</td>
+				    </tr>
+				    <tr>
+				      <th scope="row">2</th>
+				      <td>Jacob</td>
+				      <td>Thornton</td>
+				      <td>@fat</td>
+				    </tr>
+				    <tr>
+				      <th scope="row">3</th>
+				      <td>Larry</td>
+				      <td>the Bird</td>
+				      <td>@twitter</td>
+				    </tr>
+				  </tbody>
+				</table>
+			</div>
+			<p>This table</p>
+		</div> <!-- End of this table -->
 	</div>
 </div> <!-- End of blog-div -->
 
